--- a/docker-compose.production.yml
+++ b/docker-compose.production.yml
@@ -17,6 +17,8 @@ services:
     env_file: .env
     volumes:
       - static_volume:/backend_static
+    depends_on:
+      - db
   frontend:
     image: walkman444/taski_frontend  # Качаем с DockerHub
     env_file: .env
