--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,6 +18,8 @@ services:
     # Тут подключаем volume к backend
     volumes:
       - static:/backend_static
+      depends_on:
+      - db
   frontend:
     env_file: .env
     build: ./frontend/
